--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <a href="index.html">Home</a>
     <a href="Portfolio.html">Portfolio</a>
       <a href="aboutme.html">About Me</a>
+      <a href="vocabulary.html">Vocab</a>
     <h1>This is Nour's property</h1>
     <img src="images/home.jpg" height="250">
   </body>
