--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,8 +5,11 @@
 	    <title>Portfolio</title>
 	  </head>
 	  <body>
+    
     <a href="index.html">Home</a>
     <a href="Portfolio.html">Portfolio</a>
+    <a href="aboutme.html">About Me</a>
+    <a href="vocabulary.html">Vocab</a>
     <h1>Welcome to the portfolio page, KACHIGGA</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
