--- a/aboutme.html
+++ b/aboutme.html
@@ -5,8 +5,10 @@
 	    <title>About me (-_-)</title>
 	  </head>
 	  <body>
-    <a href="index.html">Home</a>
-    <a href="aboutme.html">About Me</a>
+   <a href="index.html">Home</a>
+   <a href="Portfolio.html">Portfolio</a>
+   <a href="aboutme.html">About Me</a>
+   <a href="vocabulary.html">Vocab</a>
     <h1>Welcome to the About me page</h1>
     <img src="images/patrick.jpg" height="250">
      <img src="images/savagerealm.jpg" height="250">
