--- a/vocabulary.html
+++ b/vocabulary.html
@@ -5,8 +5,10 @@
 	    <title>Vocab</title>
 	  </head>
 	  <body>
-    <a href="index.html">Home</a>
-    <a href="vocabularyocab.html">Vocab</a>
+<a href="index.html">Home</a>
+<a href="Portfolio.html">Portfolio</a>
+<a href="aboutme.html">About Me</a>
+<a href="vocabulary.html">Vocab</a>
     <h1>This my vocab</h1>
  
     <br>
